--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "astro-expressive-code": "^0.41.2",
     "playwright": "^1.52.0",
     "rehype-mermaid": "^3.0.0",
-    "sharp": "^0.32.5"
+    "sharp": "^0.32.5",
+    "starlight-llms-txt": "^0.5.1"
   }
 }
