--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "playwright": "^1.52.0",
     "rehype-mermaid": "^3.0.0",
     "sharp": "^0.32.5",
+    "starlight-giscus": "^0.6.1",
     "starlight-llms-txt": "^0.5.1"
   }
 }
